@@ -37,6 +37,9 @@ Foo foo = Stub {
 
 - A sequence of two or more underscores can be used to separate multiple data tables in one `where` block.
 
+- Type casts in conditions are now properly carried over to properly disambiguate method calls.
+  For more information see issue https://github.com/spockframework/spock/issues/1022[#1022].
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
